--- a/index.html
+++ b/index.html
@@ -12,5 +12,25 @@
 </head>
 <body>
     <div class "caixa">
-        <h1><img src=gatinho.jpeg</h1>
+        <h1><img src="gatinho.jpeg" alt =""></h1>
+
+        <nav>
+            <ul>
+                <li|><a href="index.html">Home</a></li>
+                <li><a href="professores.html">professores</a></li>
+                <li><a href="contato.html">Contato</a></li>
+            </ul>
+        </nav>
     </div>
+</header>
+
+<main>
+    <form>
+    <label for="nomesobrenome">Nome e Sobrenome</label>
+    <input type="text" id="nomesobrenome" class="input-padrao" required>
+
+    <label for="email">Email</label>
+    <input type="email" id="email" class="input-padrao" required placeholder="seuemail@dominio.com">
+    
+    </form>
+</main>
