--- a/index.html
+++ b/index.html
@@ -31,6 +31,38 @@
 
     <label for="email">Email</label>
     <input type="email" id="email" class="input-padrao" required placeholder="seuemail@dominio.com">
+
+    <label for="telefone">telefone</label>    
+    <input type="tel" id="telefone" class="input-padrao" required placeholder="(xx) xxxxx-xxxx">
+
+    <label for="mensagem">mensagem</label>
+    <textarea cols="70" rows="10" id="mensagem" class="input-padrao"></textarea> <required>
+
+        <fieldset>
+            <legend>Como prefere ser incomodado?</legend>
+            <label for="radio-email"><input type="radio" name="contato" value="telefone" id="radio-email">Email</label>
+
+            <label for="radio-telefone"><input type="radio" name="contato" value="telefone" id="radio-telefone">Telefone</label>
+
+            <label for="radio-zap"><input type="radio" name="contato" value="whatsApp" id="radio-zap" checked>whatsApp</label>
+        </fieldset>
+
+        <fieldset>
+            <legend>Qual horario vc vem?</legend>
+            <select>
+                <option>manhã</option>
+                <option>tarde</option>
+                <option>noite</option>
+            </select>
+        </fieldset>
+
+
+
+
+
+
+
+
     
     </form>
 </main>
