--- a/professores.html
+++ b/professores.html
@@ -14,6 +14,23 @@
 
     <header>
         <div class="caixa">
-            <h1><img src=</h1>
+            <h1><img src="gatos01.jpg"></h1>
+
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="professores.html">professores</a></li>
+                    <li><a href="contato.html"></a></li>
+                </ul>
+            </nav>
         </div>
     </header>
+
+    <main>
+        <ul class="professores">
+            <li>
+                <h2>David</h2>
+                <img src=""
+            </li>
+        </ul>
+    </main>
