--- a/professores.html
+++ b/professores.html
@@ -30,6 +30,13 @@
         <ul class="professores">
             <li>
                 <h2>David</h2>
+                <img src="panda.jpeg">
+                <p class="professores-d">Socorro deus</p>
+                <p class="professores-p">HELP-ME</p>
+            </li>
+            <li>
+
+                <h2>Gleiciane</h2>
                 <img src=""
             </li>
         </ul>
