--- a/professores.html
+++ b/professores.html
@@ -37,7 +37,13 @@
             <li>
 
                 <h2>Gleiciane</h2>
+                <img src="leao.jpeg">
+                <p class="professores-d">corte rápido e direto</p>
+                <p class="professores-p">tramontina</p>
+
+                <h2>tiago</h2>
                 <img src=""
+
             </li>
         </ul>
     </main>
