--- a/professores.html
+++ b/professores.html
@@ -43,8 +43,13 @@
 
                 <h2>tiago</h2>
                 <img src="ursinhopooh.jpeg">
-                <
+                <p class="professores-d">Pai do técnico</p>
+                <p class="professores-p">O coordenador</p>
 
             </li>
         </ul>
     </main>
+
+       <footer>
+          <img src=""
+       </footer>
