--- a/professores.html
+++ b/professores.html
@@ -51,5 +51,8 @@
     </main>
 
        <footer>
-          <img src=""
+          <img src="logobranco.png">
+          <p class="copyright">&copy; Copyright Curso técnico Mário braga-2023</p>
        </footer>
+</body>
+</html>
