--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="index.js">
 
 </head>
-<body>
+<header>
     <div class "caixa">
         
 
@@ -26,7 +26,9 @@
     </div>
 </header>
 
-<main>
+<body>
+    
+
     <form>
     <label for="nomesobrenome">Nome e Sobrenome</label>
     <input type="text" id="nomesobrenome" class="input-padrao" required>
@@ -60,6 +62,7 @@
 
 
     </form>
+</body>
    <!--
 Particle Volumetric Light 
 https://codepen.io/wakana-k/pen/eYQjReV
