--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>document</title>
     
-    <link rel="stylesheet" type="text/css" href="style.css"/>
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="index.js">
 
@@ -18,7 +17,7 @@
 
         <nav>
             <ul>
-                <li|><a href="index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="professores.html">professores</a></li>
                 <li><a href="contato.html">Contato</a></li>
             </ul>
