--- a/index.html
+++ b/index.html
@@ -13,7 +13,14 @@
 
 
 <body>
+<header>
+    <ul>
+        <li><a href="contato.html">contato</a></li>
+        <li><a href="professores.html">professores</a></li>
+
     
+    </ul>
+</header>    
 
 </body>
    
