--- a/contato.html
+++ b/contato.html
@@ -24,7 +24,7 @@
             </nav>
         </div>
     </header>
-    <h1><img src="nyan-cat-1.gif"</h1>
+    <h1 class="nya"><img src="nyan-cat-1.gif"</h1>
     
         <form>
         <label for="nomesobrenome">Nome e Sobrenome</label>
