--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>document</title>
     
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="style.css">
 
 </head>
 
